2017-01-21 Werner S Freund
	* Fixed small bug on job submission where csv option would show as []
	when empty, instead not showing at all.

2017-01-20 Werner S Freund
	* Added tex/beamer api.
	* Silenced boost dirname complaint when no boost is available in the
	LD_LIBRARY_PATH.
	* Improved LimitedTypeList to check if base classes are list subclasses
	as well as if they declare _acceptedTypes (where the first base
	_acceptedTypes will be used by default).
	* Only add __init__ method for LimitedTypeList when it does not
	inherit from a LimitedTypeList.
	* Added simple method to calculate function execution time.
	* Bug fix on inspect_list_attrs when depth was zero and wantedTypes was None
	* Tagging RingerCore-01-00-04.

2017-01-12 Werner S Freund
	* Fixed Logger overriding class attributes for its message methods without
	when starting without '_'
	* Tagging RingerCore-01-00-03.

2017-01-12 Werner S Freund
	* Protect against wrong type setup on cluster manager setup
	* Tagging RingerCore-01-00-02.

2017-01-12 Werner S Freund
	* Improved Configured class to detect auto-configuration issues;
	* Handle argparse inexact argument matching for cluster-manager option;
	* Added ncpus configuration to local cluster jobs;
	* Logger instances now redirects message displaying methods to  the _logger
	Attribute.
	* Tagging RingerCore-01-00-01.

2017-01-08 Werner S Freund
	* Final arrangaments before going to release.
	* Tagging RingerCore-01-00-00

2017-01-07 Werner S Freund
	* python/FileIO.py, python/LimitedTypeList.py, python/LoopingBounds.py,
	python/util.py: Small import fixes
	* Added master logging level control with mutting capabilities.
	* Added global cluster-manager control.

2017-01-06 Werner S Freund
	* util.py: Moved traverse and related objects to LoopingBounds.py,
	also moved EnumStringification to Configure.py as it is commonly used
	for configuration.
	* Configure.py: Created a based class which can be used together with 