@@ -8,7 +8,7 @@ __all__ = [ 'BeamerSlide', 'BeamerTexReport'
 import os
 from RingerCore.Configure import checkForUnusedVars, Holder, retrieve_kw, NotSet
 from RingerCore.Logger import Logger, LoggingLevel
-from RingerCore.util import GRID_ENV
+from RingerCore.Configure import RCM_GRID_ENV
 from RingerCore.tex.TexAPI import *
 
 class PDFTexLayout( TexPackage ):
@@ -355,7 +355,7 @@ class BeamerTexReport( TexObjectCollection ):
     kw['slidenumber'] = slidenumber
     self._toPDF       = kw.pop( '_toPDF', None )
     # Behavior:
-    self._ignoreErrors = retrieve_kw( kw, 'ignoreErrors', False if not GRID_ENV else True )
+    self._ignoreErrors = retrieve_kw( kw, 'ignoreErrors', False if not RCM_GRID_ENV else True )
     TexObjectCollection.__init__(self, *args, **kw)
     if self._stream() is None or self._toPDF is not None:
       changeStream = True
